# platform-questions-backend

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  main.py  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
app/core/: apps.py  models.py  urls.py  views.py
app/custom_auth/: apps.py
apps/auth/: README.md  __init__.py  apps.py  authentication.py  config.py  container.py  dto.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/auth/dto/: __init__.py  google_oauth.py  login.py  logout.py  me.py  profile.py  register.py  token.py
apps/auth/exceptions/: google_oauth.py  invalid_credentials.py  invalid_token.py  is_user_already_exists.py  token_expired.py
apps/auth/migrations/: 0001_initial.py
apps/auth/models/: __init__.py  auth.py
apps/auth/permissions/: __init__.py  role.py  role_permissions.py
apps/auth/serializers/: google_oauth.py  login.py  logout.py  me.py  profile.py  refresh.py  register.py
apps/auth/services/: auth.py  confirmation_link.py  cookie.py  cookie_service.py  email_confirmation.py  google_oauth.py  jwt.py  jwt_service.py  me.py  profile.py
apps/auth/swagger/: confirm_email.py  google_oauth.py  login.py  logout.py  me.py  me_update.py  profile.py  refresh.py  register.py
apps/auth/tests/: test_auth_service_refresh.py  test_jwt_service.py
apps/auth/tokens/: abstructs.py  django.py
apps/auth/views/: confirm_email.py  login.py  logout.py  me.py  oauth.py  profile.py  refresh.py  register.py
apps/core/: apps.py  container.py  exceptions.py  logger.py  responses.py  service.py  urls.py
apps/core/swagger/: common.py
apps/custom_auth/: apps.py
apps/notifications/abstructs/: __init__.py  notification_sender.py
apps/notifications/services/: email.py  sms.py
apps/questions/: admin.py  apps.py  container.py  models.py  pagination.py  permissions.py  seed.py  serializers.py  urls.py  views.py
apps/questions/common/: pagination.py
apps/questions/dto/: question.py
apps/questions/exception/: answer_not_found.py  base_exceptions.py  domainError.py  exceptions.py  pagination_error.py  permission_denied.py  question_not_found.py
apps/questions/migrations/: 0001_initial.py  0002_alter_question_end_deadline_and_more.py  0002_initial.py  0003_alter_question_end_deadline.py  0003_answer_score.py  0003_remove_answer_content_and_more.py
apps/questions/models/: answer.py  category.py  content.py  mics.py  option.py  question.py
apps/questions/repositories/: answer.py  content.py  question.py
apps/questions/serializers/: answer.py  content.py  mics.py  option.py  question.py  questionContent.py
apps/questions/services/: answer.py  content.py  question.py
apps/questions/swagger/: answer.py  question.py
apps/questions/views/: answer.py  question.py
apps/user/: container.py  dto.py  models.py  serializer.py
apps/user/exceptions/: user_not_found.py
apps/user/migrations/: 0001_initial.py  0002_user_role.py  (+4 more)
config/: asgi.py  settings.py  swagger.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  dev.py  prod.py
core/: urls.py
docker/: .dockerignore  Dockerfile  docker-compose.yaml
scripts/: seed.py
staticfiles/: staticfiles.json
(+12 files in other folders)
